added images to the project section

--- a/index.html
+++ b/index.html
@@ -68,11 +68,22 @@
         <!-- Masthead-->
         <header class="masthead">
           <div class="container">
-              <!-- <div class="masthead-subheading">Hello!</div> -->
-              <!-- <div class="masthead-heading text-uppercase">Lets Start</div> -->
               <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#skills">Let's begin</a>
           </div>
         </header>
+
+
+
+
+        <div class="container">
+            <div class="text-center">
+                <img class="rounded-circle" src="assets/img/projects/Alpha_20_087.jpeg" height="25%" width="30%" />
+            </div>
+        </div>
+
+
+
+
 
 
         <!-- Services-->
@@ -80,9 +91,7 @@
             <div class="container">
                 <div class="text-center">
 
-                    <div class="container">
-                      <img class="circular--square" src="assets/img/projects/Alpha_20_087.jpeg" />
-                    </div>
+
 
 
                     <h2 class="section-heading text-uppercase">Madd Skilzzz</h2>
@@ -135,34 +144,31 @@
 
 
 
-        <!-- Portfolio Grid-->
+        <!-- Portfolio Grid at the TOP-->
 
 
         <section class="page-section bg-light" id="blog">
             <div class="container">
+              <!-- Details on abriviation centered with buttons and explenation -->
                 <div class="text-center">
                   <h2 class="section-heading text-uppercase">Projects</h2>
-
-                  <p class="section-subheading text-muted">(Details on abriviation:
+                  <p class="section-subheading text-muted"><font size="10px">(</font>Details on abriviation:
                       <a data-toggle="modal" href><i class="fas fa-info-circle fa-2x"></i>INFO</a>&nbsp
                       <a data-toggle="modal" href><i class="fab fa-github fa-2x"></i>REPO</a>&nbsp
-                      <a data-toggle="modal" href><i class="fas fa-play-circle fa-2x"></i>PLAY</a>&nbsp)
+                      <a data-toggle="modal" href><i class="fas fa-play-circle fa-2x"></i>PLAY</a>&nbsp<font size="10px">)</font>
                   </p>
-
-
                   <h3 class="section-subheading text-muted">Some selected projects for show. A lot more is coming...</h3>
-
             </div>
 
 
-
+            <!-- Portfolio Grid what is inside-->
 
 
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/treasure.gif" alt="" /></a></div>
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/01.png" alt="" /></a></div>
                             <h4>Treasure Hunt Game</h4>
                             <p class="text-muted">very simple HTML CSS</p>
 
@@ -183,7 +189,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/stock.gif" alt="" /></a></div>
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/02.png"  alt="" /></a></div>
                             <h4>StockByte</h4>
                             <p class="text-muted">JS, Rails, CSS, API</p>
 
@@ -204,7 +210,134 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/portfolio/03-thumbnail.jpg" alt="" /></a></div>
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/03.png"  alt="" /></a></div>
+                            <h4>New Project</h4>
+                            <p class="text-muted">Lead Developer</p>
+
+                            <div  style="margin-top: 5px; text-align:center;">
+                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+                                  <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
+                                  <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
+                                  <i class="fas fa-play-circle fa-3x"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/04.png"  alt="" /></a></div>
+                            <h4>Treasure Hunt Game</h4>
+                            <p class="text-muted">very simple HTML CSS</p>
+
+                            <div  style="margin-top: 5px; text-align:center;">
+                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+                                  <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
+                                  <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
+                                  <i class="fas fa-play-circle fa-3x"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/05.png" alt="" /></a></div>
+                            <h4>StockByte</h4>
+                            <p class="text-muted">JS, Rails, CSS, API</p>
+
+                            <div  style="margin-top: 5px; text-align:center;">
+                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+                                  <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://github.com/HTTP-Warriors/Stock-Byte-App" target="_blank">
+                                  <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://stockbyte.herokuapp.com/" target="_blank">
+                                  <i class="fas fa-play-circle fa-3x"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/06.png"  alt="" /></a></div>
+                            <h4>New Project</h4>
+                            <p class="text-muted">Lead Developer</p>
+
+                            <div  style="margin-top: 5px; text-align:center;">
+                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+                                  <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
+                                  <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
+                                  <i class="fas fa-play-circle fa-3x"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/07.png"  alt="" /></a></div>
+                            <h4>Treasure Hunt Game</h4>
+                            <p class="text-muted">very simple HTML CSS</p>
+
+                            <div  style="margin-top: 5px; text-align:center;">
+                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+                                  <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
+                                  <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
+                                  <i class="fas fa-play-circle fa-3x"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/08.png"  alt="" /></a></div>
+                            <h4>StockByte</h4>
+                            <p class="text-muted">JS, Rails, CSS, API</p>
+
+                            <div  style="margin-top: 5px; text-align:center;">
+                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+                                  <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://github.com/HTTP-Warriors/Stock-Byte-App" target="_blank">
+                                  <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://stockbyte.herokuapp.com/" target="_blank">
+                                  <i class="fas fa-play-circle fa-3x"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/08.png"  alt="" /></a></div>
                             <h4>New Project</h4>
                             <p class="text-muted">Lead Developer</p>
 
@@ -228,76 +361,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
-
-        <!-- <section class="page-section bg-light" id="projects">
-            <div class="container">
-                <div class="row"> -->
-
-<!-- =================================================================================================== -->
-
-                    <!-- <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <div class="portfolio-item">
-
-                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-                          <div class="portfolio-hover"><img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="" /></div></a>
-
-                          <div  style="margin-top: 5px; text-align:center;">
-                              <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-                                <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
-                              <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
-                              <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
-                                <i class="fas fa-play-circle fa-3x"></i></a>
-                          </div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <div class="portfolio-item">
-
-                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-                          <div class="portfolio-hover"><img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" /></div></a>
-
-                          <div  style="margin-top: 5px; text-align:center;">
-                              <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-                                <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
-                              <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
-                              <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
-                                <i class="fas fa-play-circle fa-3x"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="col-lg-4 col-sm-6">
-                        <div class="portfolio-item">
-
-                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-                          <div class="portfolio-hover"><img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" /></div></a>
-
-                          <div  style="margin-top: 5px; text-align:center;">
-                              <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-                                <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
-                              <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
-                              <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
-                                <i class="fas fa-play-circle fa-3x"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div> -->
-        <!-- </section> -->
 
 
 
@@ -434,8 +497,8 @@
                               <i class="fa fa-file-pdf"></i></a>
                       </div>
                     <div class="col-lg-4 text-lg-right">
-                      <a class="mr-3" data-toggle="modal" href="#portfolioModal7" style="color:black;">Privacy Policy</a>
-                      <a data-toggle="modal" href="#portfolioModal7" style="color:black;">Terms of Use</a></div>
+                      <a class="mr-3" data-toggle="modal" href="#portfolioModal100" style="color:black;">Privacy Policy</a>
+                      <a data-toggle="modal" href="#portfolioModal100" style="color:black;">Terms of Use</a></div>
                 </div>
              </div>
           </div>
@@ -620,7 +683,7 @@
             </div>
         </div>
         <!-- Modal 7-->
-        <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="portfolioModal100" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
