--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
     <body id="page-top">
 
 
+
+
+
+
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-
-
-
-          <!-- <div class="timeline-image"><a  href="https://linkedin.com/in/sxena" target="_blank">
-            <img class="rounded-circle img-fluid" src="assets/img/projects/Alpha_20_087.jpeg"  alt="" /></a></div> -->
-
+        <nav class="navbar navbar-expand-xl navbar-light fixed-top" id="mainNav">
 
           <a class="navbar-brand js-scroll-trigger" href="#page-top">Xena Sitnikova</a>
             <div class="col-lg-4 my-3 my-sm-2">
@@ -51,14 +49,14 @@
                   </i></button>
 
 
-                <div class="container">
-                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div class="container" >
+                    <div class="collapse navbar-collapse" id="navbarResponsive" >
                         <ul class="navbar-nav text-uppercase ml-auto">
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skilzzz</a></li>
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                            <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#blog">Blog</a></li> -->
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills" style="font-weight: 900;">SkLLzzz</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects" style="font-weight: 900;">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about" style="font-weight: 900;">About</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact" style="font-weight: 900;">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="02blog.html" style="font-weight: 900;">{Blog}</a></li>
                         </ul>
                     </div>
                 </div>
@@ -152,10 +150,10 @@
               <!-- Details on abriviation centered with buttons and explenation -->
                 <div class="text-center">
                   <h2 class="section-heading text-uppercase">Projects</h2>
-                  <p class="section-subheading text-muted"><font size="10px">(</font>Details on abriviation:
-                      <a data-toggle="modal" href><i class="fas fa-info-circle fa-2x"></i>INFO</a>&nbsp
-                      <a data-toggle="modal" href><i class="fab fa-github fa-2x"></i>REPO</a>&nbsp
-                      <a data-toggle="modal" href><i class="fas fa-play-circle fa-2x"></i>PLAY</a>&nbsp<font size="10px">)</font>
+                  <p class="section-subheading text-muted"><font size="5px">(</font>Details on abriviation:
+                      <a data-toggle="modal" href><i class="fas fa-info-circle fa-1x"></i>INFO</a>&nbsp
+                      <a data-toggle="modal" href><i class="fab fa-github fa-1x"></i>REPO</a>&nbsp
+                      <a data-toggle="modal" href><i class="fas fa-play-circle fa-1x"></i>PLAY</a>&nbsp<font size="5px">)</font>
                   </p>
                   <h3 class="section-subheading text-muted">Some selected projects for show. A lot more is coming...</h3>
             </div>
