--- a/index.html
+++ b/index.html
@@ -35,28 +35,24 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-xl navbar-light fixed-top" id="mainNav">
 
-          <a class="navbar-brand js-scroll-trigger" href="#page-top">Xena Sitnikova</a>
-            <div class="col-lg-4 my-3 my-sm-2">
-                <a class="btn btn-dark btn-social mx-1" href="resume.pdf" target="_blank">
-                  <i class="fa fa-file-pdf"></i></a>
-                <a class="btn btn-dark btn-social mx-1" href="mailto:sitnikovaxena@gmail.com" target="_blank">
-                  <i class="fa fa-envelope"></i></a>
-                <a class="btn btn-dark btn-social mx-1" href="tel:+12129204987" target="_blank">
-                  <i class="fa fa-phone"></i></a>
 
-             </div>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1">
                   </i></button>
 
 
                 <div class="container" >
                     <div class="collapse navbar-collapse" id="navbarResponsive" >
-                        <ul class="navbar-nav text-uppercase ml-auto">
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills" style="font-weight: 900;">SkLLzzz</a></li>
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects" style="font-weight: 900;">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about" style="font-weight: 900;">About</a></li>
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact" style="font-weight: 900;">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="02blog.html" style="font-weight: 900;">{Blog}</a></li>
+                        <ul class="navbar-nav text-uppercase mx-auto">
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#skills" style="font-weight: 900;">SkLLzzz</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#projects" style="font-weight: 900;">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#about" style="font-weight: 900;">About</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#contact" style="font-weight: 900;">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="02blog.html" style="font-weight: 900;">{Blog}</a></li>
+
+
+
+                               </div>
+
                         </ul>
                     </div>
                 </div>
@@ -71,13 +67,29 @@
         </header>
 
 
+        <div class="text-center">
+                  <div>
+                      <p><a href="https://linkedin.com/in/sxena" target="_blank" style="font-size:50px">Xena Sitnikova</a></p>
+
+                      <div class="container">
+                          <div class="text-center">
+
+                              <img class="rounded-circle" src="assets/img/projects/Alpha_20_087.jpeg" height="25%" width="30%" />
+                          </div>
+                      </div>&nbsp
 
 
-        <div class="container">
-            <div class="text-center">
-                <img class="rounded-circle" src="assets/img/projects/Alpha_20_087.jpeg" height="25%" width="30%" />
-            </div>
+                      <p>
+                      <a class="btn btn-dark btn-social mx-1" href="resume.pdf" target="_blank">
+                        <i class="fa fa-file-pdf"></i></a>
+                      <a class="btn btn-dark btn-social mx-1" href="mailto:sitnikovaxena@gmail.com" target="_blank">
+                        <i class="fa fa-envelope"></i></a>
+                      <a class="btn btn-dark btn-social mx-1" href="tel:+12129204987" target="_blank">
+                        <i class="fa fa-phone"></i></a>
+                      </p>
         </div>
+
+
 
 
 
@@ -150,8 +162,8 @@
               <!-- Details on abriviation centered with buttons and explenation -->
                 <div class="text-center">
                   <h2 class="section-heading text-uppercase">Projects</h2>
-                  <p class="section-subheading text-muted"><font size="5px">(</font>Details on abriviation:
-                      <a data-toggle="modal" href><i class="fas fa-info-circle fa-1x"></i>INFO</a>&nbsp
+                  <p class="section-subheading text-muted"><font size="5px">(</font>Details on abriviation:</p>
+                      <pxenadev><a data-toggle="modal" href><i class="fas fa-info-circle fa-1x"></i>INFO</a>&nbsp
                       <a data-toggle="modal" href><i class="fab fa-github fa-1x"></i>REPO</a>&nbsp
                       <a data-toggle="modal" href><i class="fas fa-play-circle fa-1x"></i>PLAY</a>&nbsp<font size="5px">)</font>
                   </p>
