All done! last commit

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
                 <div class="row">
                     <div class="col-lg-8 mx-auto text-center">
-                      <p class="large text-muted">Plsease enjoy my little world.</p>
+                      <p class="large text-muted">Please enjoy my little world.</p>
 
                     </div>
                 </div>
