--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                   <div class="col-lg-4">
                       <div class="team-member">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal0">
-                        <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/01.png" alt="" /></a></div>
+                        <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/10.png" alt="" /></a></div>
                           <h4>Simple Apps</h4>
                           <p class="text-muted">very simple HTML CSS React</p>
 
@@ -418,21 +418,23 @@
                                     <p class="item-intro text-muted">HTML, CSS, REACT</p>
 
                                   <div class="row">
-                                    <div class="col-sm-3">
+                                    <div class="col-lg-5">
                                         <!-- <div class="team-member"> -->
-                                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+                                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1"></a>
                                           <!-- <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/01.png" alt="" /></a></div> -->
 
                                           <!-- <div  style="margin-top: 5px; text-align:center;"> -->
                                               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-                                                <i class="fas fa-info-circle fa-1x"></i></a>&nbsp
+                                                <i class="fas fa-info-circle fa-1x"></i></a>
                                               <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                                <i class="fab fa-github fa-1x" aria-hidden="true"></i></a>&nbsp
+                                                <i class="fab fa-github fa-1x" aria-hidden="true"></i></a>
                                               <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
                                                 <i class="fas fa-play-circle fa-1x"></i></a>
+
+
                                           <!-- </div> -->
 
-                                            <h7>Treasure Hunt Game (HTML CSS)</h7>
+                                            <h7>Treasure Hunt (HTML CSS)</h7>
                                             <!-- <p class="text-muted">HTML CSS</p> -->
 
 
@@ -440,16 +442,16 @@
                                     </div>
 
 
-                                    <div class="col-sm-3">
+                                    <div class="col-lg-5">
                                         <!-- <div class="team-member"> -->
-                                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+                                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3"></a>
                                           <!-- <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/03.png"  alt="" /></a></div> -->
 
                                           <!-- <div  style="margin-top: 5px; text-align:center;"> -->
                                               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-                                                <i class="fas fa-info-circle fa-1x"></i></a>&nbsp
+                                                <i class="fas fa-info-circle fa-1x"></i></a>
                                               <a class="portfolio-link" href="https://github.com/MyProjects898/Learn-Light-Bulb" target="_blank">
-                                                <i class="fab fa-github fa-1x" aria-hidden="true"></i></a>&nbsp
+                                                <i class="fab fa-github fa-1x" aria-hidden="true"></i></a>
                                               <a class="portfolio-link" href="https://light-bulb.herokuapp.com/" target="_blank">
                                                 <i class="fas fa-play-circle fa-1x"></i></a>
                                           <!-- </div> -->
@@ -464,9 +466,9 @@
 
 
 
-                                        <div class="col-sm-3">
+                                        <div class="col-lg-5">
                                             <!-- <div class="team-member"> -->
-                                              <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+                                              <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4"></a>
                                               <!-- <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/04.png"  alt="" /></a></div> -->
 
                                               <!-- <div  style="margin-top: 5px; text-align:center;"> -->
@@ -485,13 +487,13 @@
                                             <!-- </div> -->
                                         </div>
 
+                                    <!-- </div> -->
 
 
-
-
-                                        <div class="col-sm-3">
+                                    <!-- <div class="row"> -->
+                                        <div class="col-lg-5">
                                             <!-- <div class="team-member"> -->
-                                              <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+                                              <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5"></a>&nbsp
                                               <!-- <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/05.png" alt="" /></a></div> -->
 
                                               <!-- <div  style="margin-top: 5px; text-align:center;"> -->
@@ -510,10 +512,10 @@
                                             <!-- </div> -->
                                         </div>
 
-                                    </div>
 
-                                    <div class="row">
-                                        <div class="col-md-3">
+
+
+                                        <div class="col-lg-5">
                                             <!-- <div class="team-member"> -->
                                               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
                                               <!-- <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/06.png"  alt="" /></a></div> -->
@@ -537,7 +539,7 @@
 
 
 
-                                        <div class="col-md-3">
+                                        <div class="col-lg-5">
                                             <!-- <div class="team-member"> -->
                                               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
                                               <!-- <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/07.png"  alt="" /></a></div> -->
@@ -557,11 +559,10 @@
 
                                             <!-- </div> -->
                                         </div>
+                                      </div>
 
 
-
-
-                                        <div class="col-md-3">
+                                        <div class="col-lg-5">
                                             <!-- <div class="team-member"> -->
                                               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
                                               <!-- <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/08.png"  alt="" /></a></div> -->
@@ -580,7 +581,7 @@
 
 
                                             <!-- </div> -->
-                                        </div>
+
                                       </div>
 
 
