redid the blog page

--- a/02blog.html
+++ b/02blog.html
@@ -1,17 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-
-
-
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-
-
-
-  <body>
-
     <!DOCTYPE html>
     <html lang="en">
         <head>
@@ -57,11 +43,11 @@
                     <div class="container" >
                         <div class="collapse navbar-collapse" id="navbarResponsive" >
                             <ul class="navbar-nav text-uppercase mx-auto">
-                                <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#skills" style="font-weight: 900;">SkLLzzz</a></li>
+                                <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#skills" style="font-weight: 900;">SkLLzzz</a></li>
                                 <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#projects" style="font-weight: 900;">Projects</a></li>
                                 <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#about" style="font-weight: 900;">About</a></li>
-                                <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#contact" style="font-weight: 900;">Contact</a></li>
-                                <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="02blog.html" style="font-weight: 900;">{Blog}</a></li>
+                                <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#contact" style="font-weight: 900;">Contact</a></li> -->
+                                <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="index.html" style="font-weight: 900;">{HOME}</a></li>
 
 
 
@@ -75,9 +61,9 @@
 
             <!-- Masthead-->
             <header class="masthead">
-              <div class="container">
+              <!-- <div class="container">
                   <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#skills">Let's begin</a>
-              </div>
+              </div> -->
             </header>
             <!-- Services-->
             <section class="page-section" id="skills">
@@ -98,50 +84,43 @@
 
 
 
+            <!-- <section class="page-section bg-light" id="projects">
 
-
-            <!-- Portfolio Grid at the TOP-->
-
-
-            <section class="page-section bg-light" id="projects">
-
-                  <!-- Details on abriviation centered with buttons and explenation -->
                     <div class="text-center">
                       <h2 class="section-heading text-uppercase">Projects</h2>
                 </div>
 
 
-                <!-- Portfolio Grid what is inside-->
             <section class="page-section" id="about">
-            </section>
+            </section> -->
 
 
 
             <!-- About-->
-            <section class="page-section" id="about">
+            <!-- <section class="page-section" id="about">
 
                     <div class="text-center">
                         <h2 class="section-heading text-uppercase">About</h2>
                     </div>
 
-            </section>
+            </section> -->
 
 
 
 
             <!-- Contact-->
-            <section class="page-section" id="contact">
+            <!-- <section class="page-section" id="contact">
                 <div class="container">
                     <div class="text-center">
                         <h2 class="section-heading text-uppercase">Contact Me</h2>
                         <h3 class="section-subheading text-muted">Will be very happy to hear from you!</h3>
                     </div>
 
-                  
+
                 </div>
-            </section>
+            </section> -->
             <!-- Blog-->
-            <section class="page-section bg-light" id="blog">
+            <!-- <section class="page-section bg-light" id="blog">
                 <div class="container">
                     <div class="text-center">
                         <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
@@ -177,7 +156,7 @@
                         <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
 
             <!-- Footer-->
